# ExIntelRealSense

./: .gitignore  .project  README.md  build.gradle  gradle.properties  settings.gradle
ExIntelRealSense/: build.gradle  gradle.properties
ExIntelRealSense/app/: build.gradle
ExIntelRealSense/app/src/main/: AndroidManifest.xml
ExIntelRealSense/app/src/main/assets/: image.txt
ExIntelRealSense/camera/: CMakeLists.txt  build.gradle  proguard-rules.pro
ExIntelRealSense/camera/src/main/cpp/: real_sense.cpp
ExIntelRealSense/camera/src/main/java/wee/digital/camera/: Camera.kt  DepthSense.kt  Extensions.kt  RealSense.kt  RealSenseControl.kt  RealSenseLiveData.kt  RealSenseView.kt
ExIntelRealSense/camera/src/main/java/wee/digital/camera/core/: Box.java  FaceModel.kt  MTCNN.kt  ModelFilter.kt  RealSenseControl.kt
ExIntelRealSense/camera/src/main/java/wee/digital/camera/detector/: FaceDetector.kt  MTCNN.kt  ModelFilter.kt
ExIntelRealSense/camera/src/main/java/wee/digital/camera/job/: DebugDetectJob.kt  DebugJob.kt  FaceDetectJob.kt
ExIntelRealSense/camera/src/main/java/wee/digital/camera/widget/: CameraView.kt  DetectorView.kt
ExIntelRealSense/camera/src/main/res/layout/: widget_camera_view.xml
app/: build.gradle  google-services.json
app/src/main/: AndroidManifest.xml
app/src/main/assets/: color.txt  depth.txt
app/src/main/res/layout/: activity_main.xml  afk.xml  camera.xml  detect.xml  enroll.xml  portrait.xml
camera/: .gitignore  build.gradle  build_real_sense.gradle
camera/src/main/: AndroidManifest.xml
camera/src/main/cpp/: real_sense.cpp
(+84 files in other folders)
